@@ -8,6 +8,7 @@
 * Exclude GD templates from The SEO Framework XML sitemap - FIXED
 * Price field settings shows multiple thousand separator option - FIXED
 * Yoast SEO noindex option is not working on single listing page - FIXED
+* Hide active & admin edit only option for some default fields - FIXED
 
 = 2.2.7 =
 * SEO title conflicts with SEOPress - FIXED
